attempt to get grid to be correct width on iphone

--- a/src/app/components/image-grid/image-grid.component.css
+++ b/src/app/components/image-grid/image-grid.component.css
@@ -8,7 +8,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 25vh 25vh 25vh;
-  grid-gap: 4vh;
+  gap: 4vh 2vw;
   margin-left: 2vw;
 
 }
